--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Ken Berkeley <kenberkeley@foxmail.com>",
   "version": "0.1.0",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node build/dev-server.js",
+    "start": "cross-env NODE_ENV=development webpack",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config build/webpack.prod.conf.js"
   },
   "repository": {
