--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "my-react-demo",
-  "description": "A Simple Message Board Demo developed by React",
-  "author": "Ken Berkeley <kenberkeley@foxmail.com>",
-  "version": "0.1.0",
+  "name": "react-tab-selector",
+  "version": "1.0.0",
+  "description": "A sample component with React.",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config build/webpack.prod.conf.js"
+    "start": "node ./server.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kenberkeley/react-demo.git"
+    "url": "https://github.com/supnate/react-tab-selector.git"
   },
-  "dependencies": {
-    "history": "^2.0.0",
-    "lodash": "^4.15.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.7.0",
-    "react-router-redux": "^4.0.5",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0",
-    "superagent": "^2.2.0"
+  "keywords": [
+    "react",
+    "reactjs",
+    "hot",
+    "reload",
+    "edit",
+    "webpack"
+  ],
+  "author": "Nate Wang <supnate@gmail.com> (http://github.com/supnate)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/supnate/react-tab-selector/issues"
   },
+  "homepage": "https://github.com/supnate/react-tab-selector",
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-eslint": "^4.1.3",
@@ -34,40 +34,15 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.0.0",
     "babel-runtime": "^6.9.0",
-    "browser-sync": "^2.11.1",
-    "browser-sync-webpack-plugin": "^1.0.1",
-    "connect-history-api-fallback": "^1.1.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.23.0",
-    "eslint": "^1.10.3",
-    "eslint-friendly-formatter": "^1.2.2",
-    "eslint-loader": "^1.2.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-react": "^5.0.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
-    "express-favicon": "^1.0.1",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^1.7.0",
-    "inject-loader": "^2.0.1",
-    "json-loader": "^0.5.4",
-    "less": "^2.6.0",
-    "less-loader": "^2.2.2",
-    "node-sass": "^3.4.2",
-    "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "redux-logger": "^2.6.1",
-    "rimraf": "^2.5.0",
-    "sass-loader": "^3.2.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.6.0",
-    "why-did-you-update": "0.0.8"
+    "css-loader": "^0.15.0",
+    "jsx-loader": "^0.12.2",
+    "react-dom": "^15.3.1",
+    "react-hot-loader": "^1.1.1",
+    "style-loader": "^0.12.4",
+    "webpack": "^1.5.1",
+    "webpack-dev-server": "1.6.4"
   },
-  "license": "MIT"
+  "dependencies": {
+    "react": "^15.0"
+  }
 }
