--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-0": "^6.0.0",
     "babel-runtime": "^6.9.0",
     "css-loader": "^0.15.0",
+    "html-webpack-plugin": "^2.22.0",
     "jsx-loader": "^0.12.2",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^1.1.1",
