--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "babel-preset-stage-0": "^6.0.0",
     "babel-runtime": "^6.9.0",
     "css-loader": "^0.15.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "jsx-loader": "^0.12.2",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^1.1.1",
+    "sass-loader": "^4.1.0",
     "style-loader": "^0.12.4",
     "webpack": "^1.5.1",
     "webpack-dev-server": "1.6.4"
